# ExtModule-005

./: .gitmodules  ReadMe.md
FW/: ReadMe.md  esp-idf-env.bat  esp-idf-env.sh
FW/001-base/: CMakeLists.txt  ReadMe.md  partitions.csv  sdkconfig  sdkconfig.defaults
FW/001-base/main/: CMakeLists.txt  Kconfig.projbuild  console.cpp  globalconfig.cpp  globalconfig.h  hbox_config.c  hbox_config.h  hbox_config.ld  main.c  spiffs.cpp  sysled.cpp  sysled.h  wdt.cpp
FW/001-base/spiffs_image/: banner
FW/002-basebleprph/: CMakeLists.txt  ReadMe.md  sdkconfig
FW/002-basebleprph/basebleprph/: CMakeLists.txt  blehshellservice.c  blemain.cpp
FW/003-baseeth/: CMakeLists.txt  ReadMe.md  sdkconfig
FW/003-baseeth/baseeth/: CMakeLists.txt  Kconfig.projbuild  baseeth.cpp  lwip_ipconfig.c
FW/004-nuttx/: .config  .gitignore  Makefile  ReadMe.md
FW/005-zephyr/: .gitignore  ReadMe.md  hbox.ld
FW/005-zephyr/001-base/: CMakeLists.txt  ReadMe.md
FW/005-zephyr/001-base/fs/: banner
HW/: ReadMe.md
HW/ESP32-Dev/: ProPrj_ESP32Dev-Core-Pro_2026-07-01.epro2  ProPrj_ESP32Dev-LAN8720-Pro_2026-07-01.epro2  ReadMe.md
HW/ESP32-DevKitC/: ReadMe.md
SOFT/BLE/: ReadMe.md
SOFT/BLE/HShellServiceClient/: CMakeLists.txt  ReadMe.md  main.cpp
